opam-version: "1.2"
version: "2.4.0"
license: "LGPL-2.1 with OCaml linking exception"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: [
  "Kate <kit.ty.kate@disroot.org>"
  "Eric Stokes <letaris@me.com>"
]
homepage: "https://github.com/kit-ty-kate/ocamldap"
dev-repo: "https://github.com/kit-ty-kate/ocamldap.git"
bug-reports: "https://github.com/kit-ty-kate/ocamldap/issues"
build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "ocamlnet" {>= "3.6.0"}
  "pcre"
  "ssl" {>= "0.5.3"}
]
available: [ocaml-version >= "4.02.3"]
tags: ["ldap"]
