opam-version: "2.0"
version: "2.5.0"
synopsis: "Implementation of the Light Weight Directory Access Protocol"
maintainer: ["Kate <kit-ty-kate@outlook.com>"]
authors: ["Eric Stokes <letaris@me.com>"]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
tags: ["ldap"]
homepage: "https://github.com/kit-ty-kate/ocamldap"
doc: "https://kit-ty-kate.github.io/ocamldap"
bug-reports: "https://github.com/kit-ty-kate/ocamldap/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {>= "4.03.0"}
  "ocamlnet" {>= "3.6.0"}
  "re" {>= "1.3.0"}
  "camlp-streams" {>= "5.0.1"}
  "ssl" {>= "0.5.3"}
]
conflicts: [
  "ocamldap" {!= "transition"}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
  ]
]
dev-repo: "git+https://github.com/kit-ty-kate/ocamldap.git"
